trying to fix the checkbox alignment

--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,7 @@ input, select, textarea {
 
 hr {
   border-color: #70ad55;
+  opacity: .5;
 }
 
 fieldset {
